# HR-Management-Backend

./: .dockerignore  .envSample  Dockerfile  hr.db  main.py  pyproject.toml
app/: app.py
app/api/: router.py
app/api/admin/: dependencies.py  jwt_handler.py  routes.py
app/api/attendanc_route/: routes.py
app/api/employee_route/: routes.py
app/db/: config.py
app/model/: attendance.py  employee.py
